# worker

./: .gitignore  Dockerfile  README.md  conf.py  docker-compose.yaml  index.html  models.py  nginx.conf  pyproject.toml  requirements.txt  schemas.py  worker_logic.py
backend/: README.md
backend/worker/work/: models.py  serializer.py  urls.py  views.py
backend/worker/work/migrations/: 0001_initial.py  0002_alter_workmodel_id.py
backend/worker/worker/: settings.py  urls.py
css/: light.css  style.css
frontend/: README.md  setup.cfg
frontend/frontend/static/css/: dark.css  light.css  style.css
frontend/frontend/static/js/: api-work.js  dark-theme.js  en-language.js  kz-language.js  languages.js  light-theme.js  modal.js  ru-language.js  theme.js
frontend/frontend/templates/frontend/: index.html
frontend/swagger/: swagger.yaml
js/: dark-theme.js  index.js  light-theme.js  theme.js
static/: index_style.css
templates/: index.html
