[metadata]
name = resume-frontend
version = 0.1.0
description = Frontend for resume project

author = Ilya Melnichuk


[options]
include_package_data = true
packages = find:
install_requires =
    Django>=4.0

[options.packages.find]
where = .

[options.package_data]
* = templates/**/*.html, static/**/*